<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_operacao_monetaria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.OperacaoMonetariaActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/descricao_operacao"
            android:textSize="20sp"></TextView>


        <EditText
            android:id="@+id/editText_descricao_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="15dp"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="15dp"
            android:text="@string/valor_operacao"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editText_valor_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="15dp"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/categoria_da_operacao"
            android:textSize="20sp"></TextView>

        <Spinner
            android:id="@+id/spinner_categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="3dp"
            android:entries="@array/categorias_geral"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="Mês da operação"
            android:textSize="20sp"></TextView>

        <Spinner
            android:id="@+id/spinner_mes_operacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="3dp"
            android:entries="@array/mes_operacao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/a_operacao_se_repete"
            android:textSize="20sp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="3dp">

            <RadioGroup
                android:id="@+id/radio_group_operacao_se_repete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_sim_repete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sim"
                    android:textSize="17sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_nao_repete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/nao"
                    android:textSize="17sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_periodo_repeticao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Selecione o período de repetição"
                android:textSize="20sp"></TextView>

            <RadioGroup
                android:id="@+id/radio_group_periodo_repeticao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_repete_diario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diario"
                    android:textSize="17sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_repete_semanal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semanal"
                    android:textSize="17sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_repete_mensal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/mensal"
                    android:textSize="17sp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_cadastrar_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/cadastrar_operacao" />

        <Button
            android:id="@+id/btn_excluir_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:text="@string/excluir_operacao"
            android:visibility="gone" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>